<resources>
    <string name="app_name">SportsUp</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_events">Events</string>
    <string name="title_profile">My profile</string>
    <string name="headline_1">Games</string>
    <string name="headline_2">Ongoing Sessions</string>
    <string name="headline_3">All sessions </string>
    <string name="invited_sessions">Invited Sessions</string>
    <string name="today_s_sessions">Today\'s Sessions</string>
    <string name="tab1">tab1</string>
    <string name="game">Game</string>
    <string name="create_new">Create new</string>
    <string name="initial_game">All</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="sports_list">Sports List</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_favorite_sports">Enter favorite sports</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="number_of_players_required">N. Players</string>
    <string name="done">Invite</string>
    <string name="select_venue">Select Venue</string>
    <string name="cancel">Cancel</string>
    <string name="event_players">%s/%s buddies required</string>
    <string name="type_a_message">Type a Message</string>
    <string name="duration">Duration</string>
    <string name="unit_of_time">Unit of Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="date">Date</string>
    <string name="image_title_description">Image Title</string>
    <string name="tab_item_players">Players</string>
    <string name="tab_item_comments">Comments</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="tab_item_about">About</string>
    <string name="txt_event_details_date">Date</string>
    <string name="txt_event_details_date_value">%s</string>
    <string name="txt_event_details_time">Time</string>
    <string name="txt_event_details_time_value">%s - %s</string>
    <string name="txt_event_details_name">%s</string>
    <string name="location_image_description">location image description</string>
    <string name="txt_event_details_venue">%s</string>
    <string name="txt_event_details_fab_mark_as_done">Fab Mark as done</string>
    <string name="txt_event_details_edit_event">Edit Event</string>
    <string name="menu_item_title_join">Join</string>
    <string name="menu_item_title_save">Save</string>
    <string name="menu_item_title_edit">Edit</string>
    <string name="tab_item_waiting_room">Waiting Room</string>
    <string name="menu_item_title_saved_events">Saved Event</string>
    <string name="menu_item_title_invites">Invitations</string>
    <string name="menu_item_title_my_events">My Events</string>
    <string name="event_info">No events happening around</string>
    <string name="event_name">Your event name</string>
    <string name="edit_age">edit age</string>
    <string name="save_edits">Save</string>
    <string name="chat_menu">Chat</string>
</resources>