<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/sports_red"
    >


    <item

        android:id="@+id/navigation_home"
        android:background="@color/sports_red"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

<!--    <item-->
<!--        android:id="@+id/navigation_chat"-->
<!--        android:icon="@drawable/baseline_chat_24"-->
<!--        android:title="@string/chat_menu" />-->

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/baseline_event_24"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />
</menu>