<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24sp"
    android:background="@color/sports_white"
    tools:context=".ui.events.EventFragment"
    android:orientation="vertical"
    android:layout_gravity="center"
    >

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btn_create_event"
        android:background="@drawable/create_button_bg"

        android:layout_width="200dp"
        android:layout_height="64sp"
        android:enabled="true"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/create_new"
        android:textSize="20dp"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        app:icon="@drawable/baseline_add_24"
        app:iconGravity="textStart"
        app:iconPadding="8sp"
       />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:text="@string/headline_3"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/game">

        <AutoCompleteTextView
            android:id="@+id/edti_text_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/initial_game"
            android:labelFor="@id/edti_text_game"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/events_recycler_view"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        />

</LinearLayout>