<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"

    app:startDestination="@+id/navigation_home">

    <fragment

        android:id="@+id/navigation_home"
        android:name="com.sigma.sportsup.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            app:popUpToSaveState="true"
            app:restoreState="true"
            app:launchSingleTop="false"
            android:id="@+id/action_navigation_home_to_navigation_events"
            app:destination="@id/navigation_events" />
    </fragment>

    <fragment

        android:id="@+id/navigation_search"
        android:name="com.sigma.sportsup.ui.chatting.ChatFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sigma.sportsup.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <navigation android:id="@+id/navigation_events"
        app:startDestination="@id/nav_events">
        <fragment
            android:id="@+id/nav_events"
            android:name="com.sigma.sportsup.ui.events.EventFragment"
            android:label="@string/title_events"
            tools:layout="@layout/fragment_events">
            <action
                android:id="@+id/action_navigation_events_to_navigation_game_create"
                app:destination="@id/navigation_game_create" />
            <action
                android:id="@+id/action_nav_events_to_navigation_event_my_event"
                app:destination="@id/navigation_event_my_event" />

        </fragment>
        <fragment
            android:id="@+id/navigation_game_create"
            android:name="com.sigma.sportsup.ui.game_creation.GameCreateFragment"
            android:label="New Game"
            tools:layout="@layout/fragment_game_create_fragment" />

        <fragment
            android:id="@+id/navigation_event_my_event"
            android:name="com.sigma.sportsup.ui.events.my_events.MyEventsFragment"
            android:label="My Events"
            tools:layout="@layout/fragment_my_events"/>
    </navigation>


    <activity
        android:id="@+id/navigation_event_activity"
        android:name="com.sigma.sportsup.EventDetailsActivity"
        tools:layout="@layout/activity_event_details"
        >
        <argument
            android:name="event_id"
            app:argType="string" />
    </activity>
</navigation>