<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/event_details_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/image_title_description"
                android:scaleType="centerCrop"
                android:src="@drawable/image_1"
                app:layout_collapseMode="parallax" />

      <!--      <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 />-->
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18sp"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:gravity="start"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_event_details_time"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_event_details_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_event_details_time_value"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Space
                    android:layout_width="130sp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_event_details_date"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_event_details_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_event_details_date_value"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/location_image_description"
                    android:src="@drawable/baseline_location_on_24" />

                <TextView
                    android:id="@+id/txt_event_details_venue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_event_details_venue"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24sp"

                />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tab_layout"
                app:tabMode="scrollable"
                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">


            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_content"
                android:layout_width="match_parent"
                android:layout_height="468dp" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        app:fabSize="normal"
        android:layout_marginEnd="30dp"
        android:src="@drawable/baseline_event_24"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/txt_event_details_fab_mark_as_done" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        app:fabSize="normal"
        android:layout_marginEnd="100dp"
        android:src="@drawable/baseline_edit_calendar_24"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:backgroundTint="@color/logo_red"
        android:visibility="invisible"
        android:focusable="true"
        android:contentDescription="@string/txt_event_details_edit_event" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!--
        app:title="Event Name"
        app:collapsedTitleTextColor="@color/white"
        app:expandedTitleTextColor="@color/white"-->
