<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="24sp"
    tools:context=".ui.game_creation.GameCreateFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="Create a New Session/Invite Friend"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_event_game_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:hint="@string/event_name"
        android:layout_below="@id/textView2"
        android:layout_marginBottom="12sp"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_event_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:labelFor="@id/edt_event_game_name"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="230sp"
        android:layout_height="61dp"
        android:hint="@string/game"
        android:layout_below="@id/txt_event_game_name_layout"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"
        >
        <AutoCompleteTextView
            android:id="@+id/edt_game"
            android:layout_width="230sp"
            android:layout_height="wrap_content"
            android:labelFor="@id/edt_game" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/n_player_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_players_required"
       android:layout_below="@id/txt_event_game_name_layout"
        android:layout_toEndOf="@id/textInputLayout"
        android:layout_marginStart="12sp"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_number_players"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:hint="@string/select_venue"
        android:layout_below="@id/textInputLayout"
        android:layout_marginBottom="12sp"
        android:layout_marginTop="12sp"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"

        >
        <AutoCompleteTextView
            android:id="@+id/edit_venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:labelFor="@id/edt_game" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtDateLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:hint="@string/date"
        android:layout_below="@id/layout2"
        app:endIconDrawable="@drawable/baseline_date_range_24"
        app:endIconMode="custom"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:labelFor="@id/edt_game"
            />

    </com.google.android.material.textfield.TextInputLayout>

   <!-- <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtTimeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="Time"
        android:layout_below="@id/layout2"
        android:layout_toEndOf="@id/txtDateLayout"
        android:layout_marginStart="12sp"
        app:endIconDrawable="@drawable/baseline_access_time_filled_24"
        app:endIconMode="custom"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_time"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="time" />

    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_time"
        android:layout_below="@id/txtDateLayout"
        android:layout_marginTop="12sp"
        app:endIconDrawable="@drawable/baseline_access_time_filled_24"
        app:endIconMode="custom"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_time"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="time" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/end_time"
        android:layout_below="@id/txtDateLayout"
        android:layout_marginTop="12sp"
        android:layout_marginStart="12sp"
        android:layout_toEndOf="@id/layout3"
        app:endIconDrawable="@drawable/baseline_access_time_filled_24"
        app:endIconMode="custom"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_end_time"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="time" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Audience"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:layout_marginBottom="12sp"
        android:layout_marginTop="12sp"
        android:layout_below="@id/layout3"
        />


    <RadioGroup
        android:id="@+id/audience_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:checkedButton="@id/rb_everyone"
        android:layout_marginBottom="12sp"
        >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_everyone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Everyone"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_my_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="My Friends"
            />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/btn_create_event"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="200dp"
        android:layout_height="64sp"
        android:layout_below="@id/audience_group"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12sp"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/done"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        android:textSize="16sp"
        app:icon="@drawable/baseline_done_24"
        app:iconGravity="textStart"
        app:iconPadding="8sp" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/btn_cancel_creating"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="200dp"
        android:layout_height="64sp"
        android:layout_below="@id/audience_group"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/btn_create_event"
        android:enabled="true"
        android:gravity="center"

        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        android:textSize="16sp"
        app:iconGravity="textStart"
        app:iconPadding="8sp" />


</RelativeLayout>